unpackaged/main/default/objects/Adoptions_over_time__c/Adoptions_over_time__c.object-meta.xml
<CustomObject>
    <label>Adoption Snapshot</label>
    <nameField>
        <label>Adoptions over time Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adoption Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>