unpackaged/main/default/objects/Adoptions_over_time__c/fields/Adoption_source__c.field-meta.xml
<CustomField>
    <fullName>Adoption_source__c</fullName>
    <label>Where does this snapshot cover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>