unpackaged/main/default/objects/Adoptions_over_time__c/fields/Cumulative_Schools__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Schools__c</fullName>
    <label>Cumulative Schools</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>