unpackaged/main/default/objects/Adoptions_over_time__c/fields/Number_of_schools__c.field-meta.xml
<CustomField>
    <fullName>Number_of_schools__c</fullName>
    <label>Current Number of schools</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>