unpackaged/main/default/objects/Adoptions_over_time__c/fields/Sum_of_adoptions__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_adoptions__c</fullName>
    <label>Adoptions Current</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>